--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push --accept-data-loss",
+    "prisma:seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
+    "prisma:reset": "prisma db push --force-reset && npm run prisma:seed"
   },
   "dependencies": {
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^5.22.0",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.485.0",
     "mongoose": "^8.18.0",
@@ -18,24 +22,25 @@
     "react-dom": "^19.1.0",
     "zod": "^3.24.1"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^20.14.0",
+    "@types/node": "^20.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-config-next": "15.5.2",
-    "postcss": "^8.5.6",
+    "postcss": "^8.4.35",
     "postcss-import": "^16.1.1",
     "postcss-nesting": "^13.0.2",
-    "prisma": "^5.14.0",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5"
-  },
-  "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.0.0"
   }
 }
